# va-vscode-copilot-template

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  MCP_SERVERS.md  PROJECT_INTENT.md  README.md  TEMPLATE_GUIDE.md  bicepconfig.json  pyproject.toml  requirements.txt  ruff.toml
.githooks/: commit-msg  pre-commit  prepare-commit-msg
.github/: copilot-instructions.md
.github/agents/: auditor.agent.md  debugger.agent.md  developer.agent.md  documenter.agent.md  infrastructure.agent.md  qa.agent.md  scanner.agent.md  scrum-master.agent.md
.github/context/: CODE_MAP.md  COMMAND_LOG.md  ISSUES_RESOLVED.md  LESSONS_LEARNED.md  NEXT_SESSION.md  PROJECT_CONTEXT.md  TEST_PLAN.md  TODO.md
.github/instructions/: azure-gov.instructions.md  azure-sdk.instructions.md  azure.instructions.md  debugging-backend.instructions.md  debugging-frontend.instructions.md  documentation.instructions.md  frontend.instructions.md  git.instructions.md  python.instructions.md  security.instructions.md  session-protocol.instructions.md  session.instructions.md  testing.instructions.md  verbose-logging.instructions.md
.github/prompts/: challenge.prompt.md  debug.prompt.md  deep-scan.prompt.md  end-session.prompt.md  health-check.prompt.md  infra-sync.prompt.md  log-issue.prompt.md  migrate-project.prompt.md  plan-check.prompt.md  pre-deploy.prompt.md  quality-report.prompt.md  quick-save.prompt.md  save-chat.prompt.md  (+8 more)
scripts/: chat_digest.py  deploy-with-private-endpoints.sh  deploy.sh  logging_config.py  setup-git-hooks.py  setup.py  setup_local.sh  validate-project.sh
(+2 files in other folders)
