[project]
name = "project-template"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true
log_cli_level = "INFO"
log_file = "Logs/logging/tests.log"
log_file_level = "DEBUG"
log_file_format = "%(asctime)s.%(msecs)03d | %(name)s | %(levelname)s | %(module)s.%(funcName)s:%(lineno)d | %(message)s"
log_file_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-v --tb=short"
